fixing awful code with padding vs margin + pro-tip devs whenever overflowing items use padding

--- a/src/packages/modules/editorial-chapters-e5/css/_responsive-editorial-chapters-e5.scss
+++ b/src/packages/modules/editorial-chapters-e5/css/_responsive-editorial-chapters-e5.scss
@@ -190,7 +190,8 @@ $tabletMax: px-em(979);
 
 @media (max-width: 909px) {
   .editorial-chapters-container {
-    margin: 24px auto 32px;
+    margin: 0 auto;
+    padding: 24px auto 32px;
 
     .container {
       width:100% !important;
@@ -273,7 +274,8 @@ $tabletMax: px-em(979);
   }
 
   .editorial-chapters-container {
-    margin: 32px auto 60px;
+    margin: 0 auto;
+    padding: 32px 0 60px;
 
     .thumb-nav {
 
