--- a/src/packages/modules/editorial-chapters-e5/css/editorial-chapters-e5.scss
+++ b/src/packages/modules/editorial-chapters-e5/css/editorial-chapters-e5.scss
@@ -34,7 +34,9 @@ $windowWidth: 1100;
 
 .editorial-chapters-container {
   @include clearfix();
-  margin: 50px auto 90px;
+  margin: 0 auto;
+  padding: 50px 0 90px;
+  overflow: hidden;
 
   .image-module {
     text-align:center;
